--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@
   --bs-gray-500: #adb5bd;
   --bs-gray-600: #6c757d;
   --bs-gray-700: #495057;
-  --bs-gray-800: #343a40; 
+  --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
   --bs-primary: #64a19d;
   --bs-secondary: #7464a1;
@@ -11562,7 +11562,7 @@ body {
   height: auto;
   min-height: 35rem;
   padding: 15rem 0;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000 100%), url("../assets/img/home.jpg");
+  background: url("../assets/img/home.jpg");
   background-position: top;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -11606,7 +11606,8 @@ body {
 
 .about-section {
   padding-top: 10rem;
-  background: linear-gradient(to bottom, #000 0%, rgba(0, 0, 0, 0.9) 75%, rgba(0, 0, 0, 0.8) 100%);
+  background: linear-gradient(to bottom, #fff 0%, rgba(255, 255, 255, 254.1) 75%, rgba(255, 255, 255, 254.2) 100%);
+
 }
 .about-section p {
   margin-bottom: 5rem;
@@ -11641,7 +11642,7 @@ body {
 
 .signup-section {
   padding: 10rem 0;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.5) 75%, #000 100%), url("");
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 254.9) 0%, rgba(0, 0, 0, 0.5) 75%, #000 100%), url("");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -11699,6 +11700,10 @@ body {
   padding: 5rem 0;
 }
 .responsive {
-  width: 100%;
+  width: 75%;
   height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  
 }
